[gd_scene load_steps=2 format=3 uid="uid://do7lg8tun7ymj"]

[ext_resource type="Script" path="res://components/upgrades/upgrade_buttons/pistol_buttons/pistol_accuracy/pistol_accuracy.gd" id="2_nkaii"]

[node name="pistol_accuracy" type="Button"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = -1
anchor_right = 0.130208
anchor_bottom = 0.308642
text = "|Pistol|
Increase
Accuracy"
script = ExtResource("2_nkaii")
metadata/_edit_use_anchors_ = true

[node name="level_1" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
grow_vertical = 0
focus_mode = 0
mouse_filter = 2

[node name="level_2" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_bottom = -19.0
grow_vertical = 0
focus_mode = 0
mouse_filter = 2

[node name="level_3" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -62.0
offset_bottom = -38.0
grow_vertical = 0
focus_mode = 0
mouse_filter = 2

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
